<resources>
    <string name="app_name">StoryApp</string>
    <string name="sp1">Tambah dan simpan Cerita Kegiatan anda</string>
    <string name="dessp1">Anda dapat menambahkan cerita dan membagikannya ke pada teman yang lain.</string>
    <string name="sp2">Kelola Setiap Kegiatan dan cerita</string>
    <string name="dessp2">Pengelolaan kegiatan yang kita lakukan setiap hari nya</string>
    <string name="sp3">Lihat dan share setiap kegiatan yang ada</string>
    <string name="dessp3">Melihat aktifitas apa saja yang sudah di upload teman anda</string>
    <string name="paswd_warning">Password harus 6 karakter</string>
    <string name="email_warning">Wrong format email</string>
    <string name="empty">Tidak boleh kosong</string>

    <string name="login_fail">Login Gagal</string>
    <string name="login_succes">Login Sukses</string>
    <string name="regisSuc">Registrasi Berhasil!!</string>
    <string name="regisFail">Registrasi Gagal</string>
    <string name="title">Title</string>
    <string name="published_date">Published Date</string>
    <string name="load_sukses">Sukses Load story</string>
    <string name="gagal_load">Gagal Load Story</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="fail_take">Failed for take photo</string>
    <string name="fail_show_camera">Fail Show Camera</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galery</string>
    <string name="description">description</string>
    <string name="upload">upload</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="upload_fail">Upload  Story Fail</string>
    <string name="upload_success">Upload Story Succes</string>
    <string name="menu_logout">Logout</string>
    <string name="look_friend_story">Look friend story</string>
    <string name="logout">Logout</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="registrasi">Registrasi</string>
    <string name="imageview">ImageView</string>
    <string name="imageview2">imageview2</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">LogIn</string>
    <string name="sign_up">Sign Up</string>
    <string name="retry">Coba Lagi</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location_not_found">Location not found</string>
    <string name="your_location">Your Location</string>
    <string name="story_failed">Story Failed</string>
    <string name="story_uploaded_by">Location Map</string>
    <string name="empty_location">Location</string>
    <string name="location">-</string>
    <string name="maps">maps</string>
</resources>