<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.DetailStory">

    <ImageView
        android:id="@+id/img_poster_det"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:contentDescription="@string/imageview"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:transitionName="tv_imgPosterTrans"
        android:scaleType="centerCrop"
        android:src="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_name_det"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:transitionName="tv_nameTrans"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_poster_det"
        app:layout_constraintStart_toStartOf="@+id/img_poster_det"
        app:layout_constraintTop_toBottomOf="@+id/img_poster_det" />


    <TextView
        android:id="@+id/tv_date_det"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="start"
        android:transitionName="tv_dateTrans"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/img_poster_det"
        app:layout_constraintStart_toStartOf="@+id/img_poster_det"
        app:layout_constraintTop_toBottomOf="@+id/img_poster_det"
        tools:text="@string/published_date" />

    <TextView
        android:id="@+id/tv_deskripsi_det"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="404dp"
        android:transitionName="tv_deskripsiTrans"
        android:text="@string/deskripsi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>